--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -134,6 +134,7 @@ extra_javascript:
 nav:
   #- Home: index.md
   - Árvore de Decisão: ./arvore-decisao/main.md
+  - KNN: ./knn/main.md
   #- Roteiros:
     #- Roteiro 1: ./roteiro1/main.md
     #- Roteiro 2: ./roteiro2/main.md
