--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -110,7 +110,7 @@ plugins:
       enable_creation_date: true
   - git-authors
   - git-committers:
-      repository: hsandmann/hsandmann.github.com
+      repository: pedromaricate/pedromaricate.github.com
       branch: main
   - search
   - badges
