--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -137,6 +137,7 @@ nav:
   - KNN: ./knn/main.md
   - K-Means: ./k-means/main.md
   - Métricas de Avaliação: ./metricas-avaliacao/main.md
+  - Random Forest: ./random-forest/main.md
   #- Roteiros:
     #- Roteiro 1: ./roteiro1/main.md
     #- Roteiro 2: ./roteiro2/main.md
